2006-07-24  Derek Atkins  <derek@ihtfp.com>

	* [lots of Makefile.am files]:
	  Allow proper compile/install from tarball using separate builddir.
	  - Don't distribute (most) generated files.
	  - Be (more) consistent about when generated files are cleaned.

	* po/POTFILES.skip:
	  - Now that we distribute the SX schema properly, don't skip it
	    in the POTFILES.skip file.

2006-07-23  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-tree-view.c: Correctly set column sort
	  orders from gconf. Fixes #348248.

2006-07-22  Derek Atkins  <derek@ihtfp.com>

	* configure.in: check for SLIB.  (#347922)

2006-07-21  Andreas Köhler  <andi5.py@gmx.net>

	* configure.in:
	* src/gnome-utils/gnc-main-window.c: Make tabs within one notebook
	  reorderable by dnd for gtk>=2.10. Fixes #343454.

2006-07-18   Christian Stimming <stimming@tuhh.de>

	* src/gnc-module/gnc-module.c: On windows, deactivate gnucash's
	extra de-quoting of path names that is done on the GNC_MODULE_PATH
	env variable.

2006-07-16  Derek Atkins  <derek@ihtfp.com>

	* configure.in:
	  check for (g-wrap) module (#347680)
	  Apparently some distributions ship g-wrap-config separately
	  from the g-wrap.scm guile module.

	* src/import-export/qif-import/qif-file.scm:
	  Ignore any unknown !Option specification.  Fixes #160735.

	* src/import-export/qif-import/qif-parse.scm:
	  Allow comma-radix numbers without a radix.  Fixes #142424.
	  I.e., allow "17.500" to be parsed either as "seventeen and a half"
	  or as "seventeen thousand five hundred".  Note that numbers STILL
	  default to decimal-radix instead of asking the user to choose.

	* src/business/business-core/gncEntry.[ch]:
	* src/business/business-ledger/gncEntryLedger.c:
	  Properly round invoice entries and totals.  Fixes #300042.
	  Perform internal computations to LCD, but then export rounded values.
	  Now, using the test case in Bug #300042 I get the same values
	  in the invoice window, in the printable invoice report, and